--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,23 @@
-# Logs
-logs
-*.log
+# dependencies
+/node_modules
+
+# builds
+/dist
+/.vite
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# local env files
+.env
+.env.local
+.env.*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# VS Code settings
+.vscode/
+
+# system files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
