--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "i18n:extract": "i18next 'src/**/*.{js,jsx,ts,tsx}' --config i18next-parser.config.cjs"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
